2006-04-30 Bernhard Held <bernhard AT bernhardheld.de>

	* support/scripts/sdcc.nsi: removed all Readmes and Makefiles
	in the library source

2006-04-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/ports/hc08/spec.mk: fixed bug 1478892

2006-04-28 Raphael Neider <rneider AT web.de>

	* src/pic16/pcode.c (pic16_newpCodeOpLit12),
	* src/pic16/gen.c (pic16_popGetLit12): NEW, create 12 bit literal,
	  (pic16_loadFSR0): handle 12 bit literals correctly, fixes #1440527
	* src/pic16/pcode.h: added prototype for pic16_newpCodeOpLit12()

2006-04-28 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/pic/libdev/Makefile.in,
	* device/lib/hc08/Makefile.in,
	* device/lib/gbz80/Makefile.in,
	* device/lib/z80/Makefile.in,
	* device/lib/ds390/Makefile.in,
	* device/lib/ds400/Makefile.in: added srcdir to include search path,
	thanks to Borut for the bug report
	* configure.in,
	* configure: always create doc/Makefile independent from --enable-doc
	* Makefile.in: always install from directory doc independent from
	--enable-doc
	* device/lib/pic/Makefile.in: added libdev again, it was erroneously
	removed
	* device/lib/pic/libdev/Makefile.in: fixed VPATH build
	* doc/Makefile.in: install *.txt if present
	* device/include/Makefile.in (install): added installation of pic/*.inc
	and pic/*.txt files again, they were erroneously removed

2006-04-28 Raphael Neider <rneider AT web.de>

	* src/pic/{gen.c,main.h,pcode.c},
	* src/pic16/{gen.c,pcode.c}: quietened compiler warnings
	    concerning signedness with casts

2006-04-28 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (genFunction): set global pic14_hasInterrupt on
	    definition of an interrupt handler,
	* src/pic/glue.c (pic14_emitInterruptHandler): moved output of
	    interrupt handler stuff from picglue() to separate routine,
	  (picglue): enabled definition of intr handlers in files w/o main()

2006-04-26 Maarten Brock <sourceforge.brock AT dse.nl>
