@@ -593,19 +593,21 @@ AC_DO_DISABLER(sdcpp,      SDCPP,      [Disables building sdcpp])
 AC_DO_ENABLER(doc,   DOC,   [Enables building the documentation])
 if test $OPT_ENABLE_DOC = 1; then
   AC_CHECK_PROG(LYX,        lyx,        lyx, :)
-  AC_CHECK_PROG(LATEX,      latex,      latex, :)
+#  AC_CHECK_PROG(LATEX,      latex,      latex, :)
   AC_CHECK_PROG(LATEX2HTML, latex2html, latex2html, :)
   AC_CHECK_PROG(PDFLATEX,   pdflatex,   pdflatex, :)
-  AC_CHECK_PROG(DVIPDF,     dvipdf,     dvipdf, :)
-  AC_CHECK_PROG(DVIPS,      dvips,      dvips, :)
+  AC_CHECK_PROG(PDFOPT,     pdfopt,     pdfopt, :)
+#  AC_CHECK_PROG(DVIPDF,     dvipdf,     dvipdf, :)
+#  AC_CHECK_PROG(DVIPS,      dvips,      dvips, :)
   AC_CHECK_PROG(MAKEINDEX,  makeindex,  makeindex, :)
 
   SDCC_REQUIRE_PROG($LYX,        lyx)
-  SDCC_REQUIRE_PROG($LATEX,      latex)
+#  SDCC_REQUIRE_PROG($LATEX,      latex)
   SDCC_REQUIRE_PROG($LATEX2HTML, latex2html)
   SDCC_REQUIRE_PROG($PDFLATEX,   pdflatex)
-  SDCC_REQUIRE_PROG($DVIPDF,     dvipdf)
-  SDCC_REQUIRE_PROG($DVIPS,      dvips)
+  SDCC_REQUIRE_PROG($PDFOPT,     pdfopt)
+#  SDCC_REQUIRE_PROG($DVIPDF,     dvipdf)
+#  SDCC_REQUIRE_PROG($DVIPS,      dvips)
   SDCC_REQUIRE_PROG($MAKEINDEX,  makeindex)
 fi
 
